--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <div class="main-page"> <!-- SECOND CONTAINER -->
 
-      <div> <!-- MAIN IMAGE -->
-        <img src="./images/illustration-hero.svg" alt="" class="image">
+      <div class="image"> <!-- MAIN IMAGE -->
+        <img src="./images/illustration-hero.svg" alt="">
       </div>
 
     <div class="main"> <!-- MAIN CARD WITH EVERYTHING INSIDE -->
