add background image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!-- <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Adeoluwa Fajimokun</a>.
+    Coded by <a href="#">Group 22- Frontend Capstone Project</a>.
   </footer> -->
 </body>
 </html>
